# RosPursuerEvader

./: CMakeLists.txt  README.md  package.xml
launch/: evader.launch  pursuer-evader.launch
src/: evader.cpp  pursuer.cpp  robot.cpp
world/: playground2.world
